<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <androidx.cardview.widget.CardView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardCornerRadius="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/felix"
                android:contentDescription="@string/person" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/felix"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/imageView"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>


        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/how_are_you"
            android:textSize="15sp"
            android:layout_toEndOf="@+id/imageView"
            android:layout_below="@id/tvName"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/tvMessage"
            android:text="@string/_1043am"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvDivider"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/dash"
            android:textColor="#CDC7C7"
            android:layout_toEndOf="@+id/imageView"
            android:layout_below="@id/imageView"
            android:layout_marginTop="-5dp"
            android:layout_marginStart="20dp"/>



</RelativeLayout>